# rest/src/main/java/at/fhtw/rest/controller/DocumentController.java
@@ -1,26 +1,46 @@
 package at.fhtw.rest.controller;
 
+import at.fhtw.rest.mapper.DocumentMapper;
 import at.fhtw.rest.persistence.entity.DocumentEntity;
 import at.fhtw.rest.service.DocumentService;
 import com.openapi.gen.springboot.api.DocumentApi;
+import com.openapi.gen.springboot.dto.Document;
 import lombok.AllArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
+
+import java.util.List;
 
 @RestController
 @AllArgsConstructor
 public class DocumentController implements DocumentApi {
     private final DocumentService documentService;
+    private final DocumentMapper documentMapper;
 
     @Override
-    public ResponseEntity<Void> uploadDocument(MultipartFile file) {
+    public ResponseEntity<Document> uploadDocument(MultipartFile file) {
 
         DocumentEntity document = new DocumentEntity();
         document.setTitle(file.getOriginalFilename());
 
-        this.documentService.save(document);
+        DocumentEntity savedDocument = this.documentService.save(document);
 
-        return ResponseEntity.ok().build();
+        return ResponseEntity.status(HttpStatus.CREATED)
+                .body(documentMapper.toDocument(savedDocument));
+    }
+
+    @Override
+    public ResponseEntity<List<Document>> getDocuments() {
+        return ResponseEntity.ok(documentMapper.toDocumentList(this.documentService.findAll()));
+    }
+
+    @Override
+    public ResponseEntity<Document> getDocumentById(Long id) {
+        return this.documentService.findById(id)
+                .map(documentMapper::toDocument)
+                .map(ResponseEntity::ok)
+                .orElse(ResponseEntity.notFound().build());
     }
 }
